--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ colorama==0.4.4
 cycler==0.11.0
 Flask==2.0.2
 fonttools==4.28.3
+gunicorn==20.1.0
 imbalanced-learn==0.8.1
 imblearn==0.0
 itsdangerous==2.0.1
